--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,9 +1,10 @@
 var:
-  last_build_time: 1735911021
+  last_build_time: 1736103231
   previously_selected_schema: zzdyx_mod
   schema_access_time:
+    wubi86: 1736077743
     xhup: 1719596156
-    zzdyx_mod: 1735914835
+    zzdyx_mod: 1736103454
     zzdyx_mop: 1721023834
-    zzdyx_perfect: 1735807390
-    zzdyx_single: 1735739552
+    zzdyx_perfect: 1736001191
+    zzdyx_single: 1735978784
