--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,10 +1,11 @@
 var:
-  last_build_time: 1736153380
+  last_build_time: 1737129507
   previously_selected_schema: zzdyx_mod
   schema_access_time:
+    japanese: 1737124887
     wubi86: 1736077743
     xhup: 1736143405
-    zzdyx_mod: 1736153384
+    zzdyx_mod: 1737130883
     zzdyx_mop: 1721023834
-    zzdyx_perfect: 1736144123
+    zzdyx_perfect: 1736238725
     zzdyx_single: 1736144056
