--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -150,6 +150,7 @@ x光	xgj
 嶅	agoi
 螯	agok
 敖	agt
+熬汤	agtd
 敖	agtk
 鳌头	agtn
 鳌	agwo
@@ -215,6 +216,7 @@ x光	xgj
 鏖战	ahzy
 啊	ai
 唉	ai
+人工智能	ai
 嗷嗷叫	aiaj
 唵	aiao
 嗄	aiao
@@ -3043,6 +3045,7 @@ x光	xgj
 别名	bimw
 不怎么样	bimy
 跛	bin
+别扭	bink
 跛	binl
 吧女	bins
 百爪挠心	binx
@@ -8757,6 +8760,7 @@ bilibili	blbl
 痴笑	chxt
 冲喜	chxu
 产险	chxv
+产线	chxx
 承欢膝下	chxx
 产销	chxy
 楚汉相争	chxz
@@ -16286,7 +16290,6 @@ bilibili	blbl
 德国人	dkgr
 捣鬼	dkgr
 打官司	dkgs
-打官腔	dkgu
 打鼓	dkgu
 打勾	dkgw
 打给	dkgx
@@ -22271,8 +22274,10 @@ bilibili	blbl
 抚琴	fkug
 扶起	fkuu
 抚慰	fkwb
+反客为主	fkwi
 抚慰金	fkwj
 扶危	fkww
+反客为主	fkwz
 抚恤金	fkxj
 拂袖	fkxl
 抚恤	fkxn
@@ -22809,8 +22814,8 @@ bilibili	blbl
 分庭	fmth
 分体	fmtj
 分摊	fmtk
-斧头	fmtn
 分头	fmtn
+斧头	fmtn
 烦透	fmtt
 粪土	fmtu
 翻腾	fmtv
@@ -22859,8 +22864,8 @@ bilibili	blbl
 翻译成	fmyc
 翻涌	fmyd
 翻一番	fmyf
-翻译家	fmyj
 翻阅	fmyj
+翻译家	fmyj
 翻译	fmyl
 烽烟	fmym
 烦忧	fmyn
@@ -26460,6 +26465,7 @@ bilibili	blbl
 共通	gftl
 攻	gftm
 过头	gftn
+工头	gftn
 共同	gfto
 共同社	gfts
 古体诗	gfts
@@ -27745,6 +27751,7 @@ bilibili	blbl
 拐	gkiz
 搁	gkj
 挂机	gkjc
+搞基	gkjf
 拐进	gkjg
 挂件	gkjj
 挂接	gkjk
@@ -28531,6 +28538,7 @@ bilibili	blbl
 敢怒而不敢言	gney
 哿	gnf
 官方	gnfh
+官府	gnfh
 哿	gnfi
 官房	gnfl
 寡妇年	gnfn
@@ -29395,8 +29403,8 @@ GPRS	gprs
 公说公有理，婆说婆有理	gsgl
 媾	gsgo
 怪声怪气	gsgq
-共商国是	gsgs
 姑姑	gsgs
+共商国是	gsgs
 怪声怪气	gsgu
 古色古香	gsgx
 各式各样	gsgy
@@ -29518,9 +29526,9 @@ GPRS	gprs
 乖宝宝	gtbb
 管壁	gtbb
 告病	gtbh
-关停并转	gtbi
 告别	gtbi
 管不住	gtbi
+关停并转	gtbi
 管保	gtbj
 管办	gtbn
 簋	gtbo
@@ -32531,12 +32539,11 @@ GPRS	gprs
 淮海战役	hhiy
 霍	hhj
 瘊	hhjb
-豪华轿车	hhjc
 豪杰	hhjc
 痕迹	hhjh
-亥	hhjj
-哼哼唧唧	hhjj
 悔恨交加	hhjj
+哼哼唧唧	hhjj
+亥	hhjj
 霍金	hhjy
 亥	hhk
 毫克	hhkf
@@ -33025,6 +33032,7 @@ GPRS	gprs
 化肥厂	hjfc
 合法	hjfd
 华	hjff
+华夫格	hjfg
 何方	hjfh
 合法化	hjfh
 何	hjfi
@@ -37782,8 +37790,9 @@ ID卡	idky
 正当年	ifdn
 正电	ifdo
 真的	ifdr
-遭到	ifds
+直到	ifds
 整顿	ifds
+遭到	ifds
 政敌	ifdt
 整地	ifdu
 整队	ifdv
@@ -37812,8 +37821,9 @@ ID卡	idky
 正反	iffq
 真分数	iffs
 正方体	ifft
-政法委	iffw
 煮饭	iffw
+正负	iffw
+政法委	iffw
 正方形	iffx
 直飞	iffz
 赜	ifg
@@ -37832,6 +37842,7 @@ ID卡	idky
 直挂	ifgk
 直观	ifgl
 整蛊	ifgo
+正果	ifgo
 赜	ifgo
 整个人	ifgr
 醉鬼	ifgr
@@ -39007,6 +39018,7 @@ ID卡	idky
 装样	ihyc
 资源	ihyd
 主演	ihyd
+遮荫	ihye
 主营	ihye
 主要	ihyf
 庄严	ihyf
@@ -39025,6 +39037,7 @@ ID卡	idky
 这一天	ihyt
 这一套	ihyt
 主业	ihyu
+遮阳	ihyv
 壮阳	ihyv
 章鱼	ihyw
 站在	ihza
@@ -41756,10 +41769,10 @@ ID卡	idky
 中邪	ioxs
 中选	ioxt
 中旬	ioxw
-中下旬	ioxx
-中小型	ioxx
 中小学	ioxx
+中小型	ioxx
 中线	ioxx
+中下旬	ioxx
 中下游	ioxy
 中西医	ioxy
 中西药	ioxy
@@ -48171,6 +48184,7 @@ ID卡	idky
 剑刃	jjrz
 家给人足	jjrz
 侥	jjs
+假死	jjsa
 健硕	jjsa
 僵尸	jjsb
 久经沙场	jjsc
@@ -49240,6 +49254,7 @@ ID卡	idky
 卷发	jmfz
 精	jmg
 兼顾	jmga
+眷顾	jmga
 鸡鸣狗盗	jmgd
 精工	jmgf
 鸡鸣狗吠	jmgf
@@ -51181,6 +51196,7 @@ ID卡	idky
 均被	jubl
 鸡犬不留	jubl
 嘉宾	jubn
+鉴宝	jubn
 鸡犬不宁	jubn
 坚强不屈	jubq
 吉卜赛	jubs
@@ -52036,9 +52052,9 @@ ID卡	idky
 节外生枝	jwsz
 解套	jwta
 救亡图存	jwtc
+几天	jwtg
 祭天	jwtg
 鲸吞	jwtg
-几天	jwtg
 精卫填海	jwth
 解体	jwtj
 几天来	jwtl
@@ -52122,8 +52138,8 @@ ID卡	idky
 解译	jwyl
 急欲	jwym
 解忧	jwyn
-几眼	jwyo
 急眼	jwyo
+几眼	jwyo
 劲往一处使	jwys
 解压缩	jwys
 九月	jwyv
@@ -53965,6 +53981,7 @@ ID卡	idky
 考古发掘	kgfj
 开房	kgfl
 开发	kgfn
+刊发	kgfn
 开发区	kgfq
 开发商	kgfs
 开发区	kgfu
@@ -55233,10 +55250,10 @@ ID卡	idky
 快餐	kncy
 宽大	knda
 空档	kndc
-快得多	kndd
 空洞	kndd
-空洞洞	kndd
 空荡荡	kndd
+空洞洞	kndd
+快得多	kndd
 空荡	knde
 宽带	kndf
 康涅狄格	kndg
@@ -57329,6 +57346,7 @@ ID卡	idky
 涟漪	ldyd
 流萤	ldye
 漏雨	ldyf
+淋雨	ldyf
 领导有方	ldyf
 流云	ldyg
 流言	ldyh
@@ -58458,6 +58476,7 @@ ID卡	idky
 辣子	lhiv
 六周	lhiw
 冷战	lhiy
+来自于	lhiy
 雷阵雨	lhiy
 冷	lhj
 零	lhj
@@ -58838,6 +58857,7 @@ ID卡	idky
 辣子	lhzv
 六周	lhzw
 冷战	lhzy
+来自于	lhzy
 雷阵雨	lhzy
 亮铮铮	lhzz
 路	li
@@ -59640,9 +59660,9 @@ ID卡	idky
 戮力	lllz
 褛	llm
 良民	llmb
+礼貌	llmm
 泪流满面	llmm
 琳琅满目	llmm
-礼貌	llmm
 礼帽	llmo
 褛	llms
 良马	llmx
@@ -62806,8 +62826,9 @@ ID卡	idky
 没准儿	mdie
 满载	mdif
 满足感	mdig
-满座	mdih
+没准	mdih
 满族	mdih
+满座	mdih
 满足	mdii
 灭顶之灾	mdii
 没做	mdij
@@ -63003,8 +63024,9 @@ ID卡	idky
 没准儿	mdze
 满载	mdzf
 满足感	mdzg
-满座	mdzh
+没准	mdzh
 满族	mdzh
+满座	mdzh
 满足	mdzi
 没做	mdzj
 满洲里	mdzl
@@ -64761,8 +64783,8 @@ ID卡	idky
 愐	mnad
 密布	mnba
 慢板	mnbc
-忙不迭	mnbd
 懵逼	mnbd
+忙不迭	mnbd
 慢班	mnbg
 密闭	mnbj
 密报	mnbk
@@ -65644,6 +65666,7 @@ ID卡	idky
 秘史	mtso
 牧师	mtsp
 秘书室	mtss
+秘书	mtsx
 毛桃	mttc
 牦	mttc
 每天	mttg
@@ -66234,6 +66257,7 @@ ID卡	idky
 马来亚	mxly
 马来语	mxly
 马力	mxlz
+马面	mxma
 没心没肺	mxmf
 绵密	mxmn
 没羞没臊	mxms
@@ -68640,8 +68664,8 @@ ID卡	idky
 牛郎星	ntlx
 年龄	ntly
 年末	ntmg
-牛头马面	ntmm
 黏米	ntmm
+牛头马面	ntmm
 牛虻	ntmo
 年迈	ntms
 牛毛	ntmt
@@ -68654,8 +68678,8 @@ ID卡	idky
 牛腩	ntnv
 牛棚	ntpc
 牛皮纸	ntpi
-牛扒	ntpk
 牛排	ntpk
+牛扒	ntpk
 年谱	ntpl
 牛皮	ntpn
 牛脾气	ntpq
@@ -68687,6 +68711,8 @@ ID卡	idky
 年青	ntug
 年轻化	ntuh
 年前	ntum
+年头	nttn
+牛头	nttn
 年轻人	ntur
 年青人	ntur
 年轻	ntus
@@ -68798,13 +68824,12 @@ ID卡	idky
 脑海	nvhd
 脑海中	nvhi
 臑会	nvhj
-脑海里	nvhl
+脑回路	nvhl
 脑回	nvho
 脑后	nvhq
 脑海中	nvhz
 脑震荡	nvid
 脑组织	nvii
-脑子里	nvil
 脑中	nvio
 脑子	nviv
 脓肿	nviv
@@ -95928,6 +95953,7 @@ ID卡	idky
 票证	pfil
 飘着	pfim
 配置	pfio
+配种	pfit
 配制	pfit
 飘走	pfiu
 票子	pfiv
@@ -96047,6 +96073,7 @@ ID卡	idky
 酦	pfzl
 飘着	pfzm
 配置	pfzo
+配种	pfzt
 配制	pfzt
 飘走	pfzu
 票子	pfzv
@@ -101377,8 +101404,8 @@ ID卡	idky
 情调	qndl
 情窦	qndn
 窃电	qndo
-强扭的瓜不甜	qndt
 情敌	qndt
+强扭的瓜不甜	qndt
 窍	qnf
 情夫	qnfg
 情份	qnfj
@@ -109216,6 +109243,7 @@ QQ密码	qqmm
 杀鸡吓猴	sjxh
 傻小子	sjxi
 伤心	sjxl
+舒心	sjxl
 身家性命	sjxm
 俞穴	sjxn
 尚须	sjxq
@@ -109375,6 +109403,7 @@ QQ密码	qqmm
 手稿	skgt
 搜刮	skgt
 摔跟头	skgt
+手鼓	skgu
 势孤	skgv
 搜狗	skgw
 授给	skgx
@@ -111694,6 +111723,7 @@ QQ密码	qqmm
 少看	spkk
 省科委	spkw
 少林	splc
+省流	spld
 省略号	splh
 少来	splh
 省略句	splj
@@ -113019,6 +113049,7 @@ QQ密码	qqmm
 甡	sttd
 舌苔	stte
 私吞	sttg
+升天	sttg
 殊途同归	sttg
 生疼	stth
 失蹄	stti
@@ -113082,8 +113113,8 @@ QQ密码	qqmm
 身台形表	stxb
 上天下地	stxd
 升心点	stxd
-私下	stxf
 剩下	stxf
+私下	stxf
 私刑	stxg
 生效	stxh
 升序	stxh
@@ -116657,6 +116688,7 @@ QQ密码	qqmm
 体弱	tjrb
 倘若	tjre
 他人	tjrj
+偷人	tjrj
 体认	tjrl
 阘	tjrl
 他日	tjrr
@@ -122597,8 +122629,8 @@ QQ密码	qqmm
 情调	undl
 情窦	undn
 窃电	undo
-强扭的瓜不甜	undt
 情敌	undt
+强扭的瓜不甜	undt
 窍	unf
 情夫	unfg
 情份	unfj
@@ -128846,8 +128878,8 @@ Z	vyz
 我为人人	wwrr
 外事处	wwsc
 外事	wwsf
-唯物史观	wwsg
 猥琐	wwsg
+唯物史观	wwsg
 外商	wwsh
 外孙子	wwsi
 玩物丧志	wwsi
@@ -135858,6 +135890,7 @@ Z	vyz
 协议条款	xytk
 锈	xytn
 虚脱	xytv
+兴云吐雾	xytw
 铣	xytw
 血液透析	xytx
 锈	xytz
@@ -137007,10 +137040,9 @@ Z	vyz
 乙烯	ycxm
 遗传信息	ycxx
 遗传性状	ycxz
-又臭又长	ycyc
-样样	ycyc
 阴差阳错	ycyc
 阴错阳差	ycyc
+又臭又长	ycyc
 乙酉	ycyf
 一唱一和	ycyh
 有此一劫	ycyj
@@ -140648,9 +140680,9 @@ Z	vyz
 又要	ylyf
 永远	ylyg
 语言	ylyh
-谣言	ylyh
-预言	ylyh
 语音	ylyh
+预言	ylyh
+谣言	ylyh
 议员	ylyi
 有棱有角	ylyj
 有理有据	ylyj
@@ -145895,8 +145927,8 @@ Z	vyz
 正当年	zfdn
 正电	zfdo
 真的	zfdr
-整顿	zfds
 直到	zfds
+整顿	zfds
 遭到	zfds
 政敌	zfdt
 整地	zfdu
@@ -145927,9 +145959,9 @@ Z	vyz
 正反	zffq
 真分数	zffs
 正方体	zfft
-政法委	zffw
-正逢	zffw
 煮饭	zffw
+正负	zffw
+政法委	zffw
 正方形	zffx
 直飞	zffz
 赜	zfg
@@ -145948,6 +145980,7 @@ Z	vyz
 直挂	zfgk
 直观	zfgl
 整蛊	zfgo
+正果	zfgo
 赜	zfgo
 整个人	zfgr
 醉鬼	zfgr
@@ -147148,6 +147181,7 @@ Z	vyz
 装样	zhyc
 资源	zhyd
 主演	zhyd
+遮荫	zhye
 主营	zhye
 主要	zhyf
 庄严	zhyf
@@ -147163,6 +147197,7 @@ Z	vyz
 座右铭	zhym
 庄园	zhyo
 主业	zhyu
+遮阳	zhyv
 壮阳	zhyv
 章鱼	zhyw
 站在	zhza
@@ -149737,10 +149772,10 @@ Z	vyz
 中邪	zoxs
 中选	zoxt
 中旬	zoxw
-中下旬	zoxx
-中小型	zoxx
 中小学	zoxx
+中小型	zoxx
 中线	zoxx
+中下旬	zoxx
 中下游	zoxy
 中西医	zoxy
 中西药	zoxy
