20250122-165139：修改“竟”和“章”字形的拆分。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -7996,6 +7996,7 @@ bilibili	blbl
 茶室	cesn
 苍山	ceso
 藏身	cesr
+茶匙	cesr
 菜式	cess
 苍生	cest
 藏私	cest
@@ -9447,8 +9448,8 @@ bilibili	blbl
 促使	cjsj
 传授	cjsk
 尝试	cjsl
-常识	cjsl
 传说	cjsl
+常识	cjsl
 仇视	cjsl
 传输率	cjsl
 传送	cjsm
@@ -24159,10 +24160,10 @@ bilibili	blbl
 腹稿	fvgt
 防	fvh
 肥厚	fvha
-防化道	fvhd
+服化道	fvhd
+防滑	fvhd
 防洪	fvhd
 防洪堤	fvhd
-防滑	fvhd
 肪	fvhe
 防护服	fvhf
 防护罩	fvhi
@@ -26328,6 +26329,7 @@ bilibili	blbl
 工料	gflm
 功力	gfln
 攻略	gflo
+故里	gflo
 过滤器	gflq
 过量	gflr
 过来人	gflr
@@ -27131,6 +27133,7 @@ bilibili	blbl
 高挑	ghtk
 高徒	ghtk
 高通	ghtl
+高台	ghtl
 高糖	ghtm
 庚帖	ghto
 高塔	ghtu
@@ -30118,6 +30121,7 @@ GPRS	gprs
 勾兑	gwdm
 够得上	gwds
 各地	gwdu
+够胆	gwdv
 各队	gwdv
 够多	gwdw
 够得着	gwdz
@@ -31515,8 +31519,8 @@ GPRS	gprs
 海棉	hdmc
 滑动摩擦	hdmc
 浩渺	hdmd
-汉墓	hdme
 鸿蒙	hdme
+汉墓	hdme
 洪魔	hdmh
 海马回	hdmh
 活命	hdmj
@@ -32863,8 +32867,10 @@ GPRS	gprs
 哈萨克	hisk
 呼扇	hisl
 喊杀	hism
+哈士奇	hisq
 号	hiss
 喉舌	hist
+哈士奇	hisu
 喊声	hisu
 呼声	hisu
 吼声	hisu
@@ -40056,6 +40062,7 @@ ID卡	idky
 专款专用	ikiy
 征召	ikiz
 蛰居	ikjb
+指甲刀	ikjd
 拙荆	ikje
 拯救	ikjf
 指教	ikjf
@@ -56901,8 +56908,8 @@ ID卡	idky
 冷嘲热讽	lcrf
 绿草如茵	lcry
 婪	lcs
-李舜臣	lcsc
 柳树	lcsc
+李舜臣	lcsc
 李斯	lcsf
 李四光	lcsg
 流传甚广	lcsg
@@ -70880,7 +70887,6 @@ ID卡	idky
 椋	ochp
 楌	ochq
 梳	ochr
-樈	ochr
 樴	ochr
 檀	ochr
 櫅	ochr
@@ -100036,8 +100042,8 @@ ID卡	idky
 亲和	qhht
 秦皇汉武	qhhw
 前后呼应	qhhy
-前呼后应	qhhy
 前呼后拥	qhhy
+前呼后应	qhhy
 庆贺	qhhz
 青红皂白	qhib
 奇恒之腑	qhif
@@ -100087,6 +100093,7 @@ ID卡	idky
 亲聆	qhlf
 凄凉	qhlh
 麒麟	qhlh
+亲睐	qhlo
 亲了亲	qhlq
 亲临	qhlu
 齐鲁	qhlw
@@ -102354,6 +102361,7 @@ QQ密码	qqmm
 气势汹汹	qsxx
 七星岩	qsxy
 轻声细语	qsxy
+亲疏有别	qsyb
 七·一	qsyd
 翘首以待	qsyd
 七月份	qsyf
@@ -106654,8 +106662,8 @@ QQ密码	qqmm
 栻	scsf
 恃宠生骄	scsj
 松手	scsk
-山重水复疑无路	scsl
 述说	scsl
+山重水复疑无路	scsl
 术数	scsm
 栓塞	scsn
 松山	scso
@@ -113045,6 +113053,7 @@ QQ密码	qqmm
 私生子	stsz
 笙	stt
 生态	stta
+失态	stta
 牲	sttd
 甡	sttd
 舌苔	stte
@@ -117367,15 +117376,13 @@ QQ密码	qqmm
 通志	tliu
 通胀	tliv
 天籁之音	tliy
-屯粮积草	tljc
-拖拉机厂	tljc
 调校	tljc
 台积电	tljd
 调酒	tljd
 调节	tlje
-讨教	tljf
 调教	tljf
 通缉犯	tljf
+讨教	tljf
 调剂	tljh
 通假字	tlji
 调价	tljj
@@ -117383,8 +117390,8 @@ QQ密码	qqmm
 通缉令	tljl
 台驾	tljn
 调节器	tljq
-调节税	tljs
 通奸	tljs
+调节税	tljs
 调节器	tlju
 通鉴	tlju
 台阶	tljv
@@ -117992,8 +117999,8 @@ QQ密码	qqmm
 炭火	tohm
 炭黑	toho
 疃	toho
+同好	tohs
 同花顺	tohs
-贴好	tohs
 贴在	toia
 团支部	toib
 图展	toib
@@ -118871,6 +118878,7 @@ QQ密码	qqmm
 塔利班	tulb
 塔林	tulc
 坦露	tulh
+塘朗	tull
 土老帽	tulm
 塔里木	tulm
 土牢	tuln
@@ -121328,6 +121336,7 @@ QQ密码	qqmm
 亲聆	uhlf
 凄凉	uhlh
 麒麟	uhlh
+亲睐	uhlo
 亲了亲	uhlq
 亲临	uhlu
 亲了亲	uhlu
@@ -123498,6 +123507,7 @@ QQ密码	qqmm
 气势汹汹	usxx
 七星岩	usxy
 轻声细语	usxy
+亲疏有别	usyb
 七·一	usyd
 翘首以待	usyd
 七月份	usyf
@@ -128897,14 +128907,13 @@ Z	vyz
 外省	wwsp
 文武双全	wwsq
 外省人	wwsr
-乌梢蛇	wwss
 畏畏缩缩	wwss
+乌梢蛇	wwss
 外甥	wwst
 文武双全	wwsu
 外孙	wwsv
 乌纱	wwsx
 望文生义	wwsy
-外孙子	wwsz
 玩物丧志	wwsz
 外套	wwta
 乌托邦	wwtb
@@ -128939,6 +128948,7 @@ Z	vyz
 勿忘	wwwh
 外侮	wwwj
 外围	wwwo
+外网	wwwo
 望闻问切	wwwq
 外围赛	wwws
 外物	wwwt
@@ -132576,9 +132586,9 @@ Z	vyz
 心理	xllg
 心率	xllh
 心里话	xllh
-小鹿乱撞	xlli
-心理战	xlli
 心路	xlli
+心理战	xlli
+小鹿乱撞	xlli
 心领	xllj
 心律	xllk
 诩	xlll
@@ -148062,6 +148072,7 @@ Z	vyz
 指战员	zkiy
 征召	zkiz
 蛰居	zkjb
+指甲刀	zkjd
 拙荆	zkje
 拯救	zkjf
 指教	zkjf
@@ -163852,7 +163863,7 @@ zł	eqzl
 张	ibtk
 札	iccc
 植	icfo
-樟	ichr
+樟	ichf
 枳	icim
 枕	iclc
 樽	icmf
@@ -163861,7 +163872,7 @@ zł	eqzl
 渣	idcr
 渍	idgo
 注	idhd
-漳	idhr
+漳	idhf
 泽	idlg
 沾	idyi
 栽	ifcc
@@ -163877,14 +163888,14 @@ zł	eqzl
 朝	ifvv
 酯	ifwr
 瑱	igfm
-璋	ighr
+璋	ighf
 责	igoj
 珠	igtk
 瑑	igxw
 主	ihdd
 症	ihfd
 疰	ihhd
-瘴	ihhr
+瘴	ihhf
 咨	ihii
 准	ihjh
 癥	ihko
@@ -163939,9 +163950,9 @@ zł	eqzl
 怔	infd
 瞩	iobr
 帻	iogo
-嶂	iohr
-幛	iohr
-蟑	iohr
+嶂	iohf
+幛	iohf
+蟑	iohf
 中	ioii
 帜	ioim
 助	ionn
@@ -163951,14 +163962,14 @@ zł	eqzl
 舟	iqkk
 昃	iraj
 最	irfl
-暲	irhr
+暲	irhf
 照	irmm
 皂	irss
 屯	iscc
 轧	iscc
 转	isgk
 臻	isgt
-嫜	ishr
+嫜	ishf
 轴	isod
 斩	isqi
 致	istk
@@ -163977,14 +163988,14 @@ zł	eqzl
 址	iuyd
 走	iuyk
 肢	ivfl
-障	ivhr
+障	ivhf
 膣	ivns
 阵	ivsi
 胀	ivtk
 争	iwbi
 杂	iwcc
 詹	iwhi
-獐	iwhr
+獐	iwhf
 旨	iwrr
 周	iwui
 织	ixim
@@ -164151,7 +164162,7 @@ zł	eqzl
 骥	jxyo
 乩	jycc
 韭	jydd
-镜	jyhr
+镜	jyhw
 镌	jyjn
 镌	jyjz
 锩	jymx
@@ -164410,43 +164421,43 @@ zł	eqzl
 猱	nwlc
 鲵	nwrw
 虐	nysd
-樟	ochr
-滰	odhr
-漳	odhr
-蔁	oehr
+樟	ochf
+滰	odhf
+漳	odhf
+蔁	oehf
 蓂	oelo
 蓂	oeoh
-騿	ofhr
+騿	ofhf
 冴	ogaw
-璄	oghr
-璋	oghr
-竸	ohhr
-麞	ohhr
+璄	oghf
+璋	oghf
+竸	ohhw
+麞	ohhf
 膺	ohjv
 痒	ohmg
 噓	oiyu
-傹	ojhr
-傽	ojhr
-糡	omhr
-慞	onhr
-蟑	oohr
-嶂	oohr
-幛	oohr
-瞕	oohr
-暲	orhr
-嫜	oshr
-境	ouhr
-墇	ouhr
+傹	ojhw
+傽	ojhf
+糡	omhw
+慞	onhf
+蟑	oohf
+嶂	oohf
+幛	oohf
+瞕	oohf
+暲	orhf
+嫜	oshf
+境	ouhw
+墇	ouhf
 墟	ouyy
 臆	ovhr
-障	ovhr
-獍	owhr
-鱆	owhr
-獐	owhr
-鏡	oyhr
-鏱	oyhr
+障	ovhf
+獍	owhw
+鱆	owhf
+獐	owhf
+鏡	oyhw
+鏱	oyhf
 镱	oyhr
-镜	oyhr
+镜	oyhw
 铥	oytl
 銩	oytl
 虛	oyud
@@ -165284,7 +165295,7 @@ zł	eqzl
 张	zbtk
 札	zccc
 植	zcfo
-樟	zchr
+樟	zchf
 枕	zclc
 樽	zcmf
 棕	zcng
@@ -165292,7 +165303,7 @@ zł	eqzl
 渣	zdcr
 渍	zdgo
 注	zdhd
-漳	zdhr
+漳	zdhf
 泽	zdlg
 栽	zfcc
 正	zfdd
@@ -165308,13 +165319,13 @@ zł	eqzl
 朝	zfvv
 酯	zfwr
 瑱	zgfm
-璋	zghr
+璋	zghf
 责	zgoj
 珠	zgtk
 瑑	zgxw
 主	zhdd
 症	zhfd
-瘴	zhhr
+瘴	zhhf
 准	zhjh
 癥	zhko
 癥	zhkt
@@ -165366,9 +165377,9 @@ zł	eqzl
 怔	znfd
 瞩	zobr
 帻	zogo
-嶂	zohr
-幛	zohr
-蟑	zohr
+嶂	zohf
+幛	zohf
+蟑	zohf
 中	zoii
 助	zonn
 账	zotk
@@ -165378,7 +165389,7 @@ zł	eqzl
 舟	zqkk
 昃	zraj
 最	zrfl
-暲	zrhr
+暲	zrhf
 照	zrmm
 皂	zrss
 昭	zrzi
@@ -165386,7 +165397,7 @@ zł	eqzl
 轧	zscc
 转	zsgk
 臻	zsgt
-嫜	zshr
+嫜	zshf
 轴	zsod
 致	zstk
 錾	zsyy
@@ -165405,12 +165416,12 @@ zł	eqzl
 址	zuyd
 走	zuyk
 肢	zvfl
-障	zvhr
+障	zvhf
 膣	zvns
 阵	zvsi
 胀	zvtk
 杂	zwcc
-獐	zwhr
+獐	zwhf
 旨	zwrr
 纵	zxjj
 综	zxng
