--- a/rime/zzdyx_single.dict.yaml
+++ b/rime/zzdyx_single.dict.yaml
@@ -4766,7 +4766,7 @@ GTP	gtp
 溱	idgt
 注	idh
 注	idhd
-漳	idhr
+漳	idhf
 澡	idi
 澡	idic
 浞	idiy
@@ -4911,7 +4911,7 @@ GTP	gtp
 奏	iggk
 瑧	iggt
 璋	igh
-璋	ighr
+璋	ighf
 珍	igj
 珍	igjq
 专	igk
@@ -4940,15 +4940,17 @@ GTP	gtp
 瘃	ihak
 主	ihd
 主	ihdd
+章	ihf
 症	ihf
 症	ihfd
+章	ihff
 瘈	ihg
 瘈	ihga
 装	ihh
 麈	ihhd
 疰	ihhd
 霅	ihhi
-瘴	ihhr
+瘴	ihhf
 装	ihhw
 痃	ihhx
 咨	ihi
@@ -4975,8 +4977,6 @@ GTP	gtp
 衷	ihow
 彰	ihq
 彰	ihqe
-章	ihr
-章	ihrf
 姿	ihs
 妆	ihss
 姿	ihss
@@ -5351,9 +5351,9 @@ GTP	gtp
 崒	iohj
 蟅	iohm
 幢	ioho
-嶂	iohr
-幛	iohr
-蟑	iohr
+嶂	iohf
+幛	iohf
+蟑	iohf
 赃	iohu
 帜	ioi
 曱	ioii
@@ -5441,7 +5441,7 @@ GTP	gtp
 早	irf
 早	irff
 最	irfl
-暲	irhr
+暲	irhf
 昣	irjq
 照	irm
 照	irmm
@@ -5475,7 +5475,7 @@ GTP	gtp
 转	isgk
 臻	isgt
 辙	ish
-嫜	ishr
+嫜	ishf
 辙	isht
 轵	isi
 轵	isim
@@ -5606,7 +5606,7 @@ GTP	gtp
 陬	ivfl
 肢	ivfl
 脏	ivh
-障	ivhr
+障	ivhf
 脏	ivhu
 胗	ivj
 胗	ivjq
@@ -5655,7 +5655,7 @@ GTP	gtp
 詹	iwh
 詹	iwhi
 鳣	iwho
-獐	iwhr
+獐	iwhf
 鳣	iwhr
 炙	iwm
 鳟	iwmf
@@ -11147,11 +11147,11 @@ GTP	gtp
 椋	ochp
 楌	ochq
 櫅	ochr
-樈	ochr
+樈	ochw
 梳	ochr
 樴	ochr
 檀	ochr
-樟	ochr
+樟	ochf
 椄	ochs
 櫳	ochs
 樚	ochs
@@ -12385,10 +12385,10 @@ GTP	gtp
 湻	odhr
 済	odhr
 濟	odhr
-滰	odhr
+滰	odhw
 湆	odhr
 澶	odhr
-漳	odhr
+漳	odhf
 济	odhr
 流	odhr
 麗	odhs
@@ -13685,7 +13685,7 @@ GTP	gtp
 萕	oehr
 荠	oehr
 薺	oehr
-蔁	oehr
+蔁	oehf
 薏	oehr
 荒	oehr
 薦	oehs
@@ -14963,7 +14963,7 @@ GTP	gtp
 驙	ofho
 醕	ofhr
 酼	ofhr
-騿	ofhr
+騿	ofhf
 職	ofhr
 韀	ofhs
 轆	ofhs
@@ -16296,9 +16296,9 @@ GTP	gtp
 琼	oghp
 珳	oghq
 璾	oghr
-璄	oghr
+璄	oghw
 璮	oghr
-璋	oghr
+璋	oghf
 琉	oghr
 麉	oghs
 瓏	oghs
@@ -17354,13 +17354,13 @@ GTP	gtp
 諳	ohhr
 癠	ohhr
 霽	ohhr
-竸	ohhr
+竸	ohhw
 旈	ohhr
 麍	ohhr
 麡	ohhr
 譠	ohhr
 瘖	ohhr
-麞	ohhr
+麞	ohhf
 旘	ohhr
 霁	ohhr
 龖	ohhs
@@ -20172,9 +20172,9 @@ GTP	gtp
 韽	ojhr
 侪	ojhr
 儃	ojhr
-傹	ojhr
+傹	ojhw
 偣	ojhr
-傽	ojhr
+傽	ojhf
 儱	ojhs
 侫	ojhs
 倿	ojhs
@@ -23332,7 +23332,7 @@ GTP	gtp
 燣	omho
 羶	omho
 熾	omhr
-糡	omhr
+糡	omhw
 羶	omhr
 爖	omhs
 豅	omhs
@@ -24504,7 +24504,7 @@ GTP	gtp
 懠	onhr
 憻	onhr
 愔	onhr
-慞	onhr
+慞	onhf
 窨	onhr
 寵	onhs
 竉	onhs
@@ -25773,11 +25773,11 @@ GTP	gtp
 峕	oohr
 蟙	oohr
 幟	oohr
-蟑	oohr
+蟑	oohf
 黯	oohr
-嶂	oohr
-幛	oohr
-瞕	oohr
+嶂	oohf
+幛	oohf
+瞕	oohf
 巃	oohs
 巄	oohs
 矓	oohs
@@ -27687,7 +27687,7 @@ GTP	gtp
 曈	orho
 晾	orhp
 暗	orhr
-暲	orhr
+暲	orhf
 軄	orhr
 曨	orhs
 鷻	orht
@@ -28522,7 +28522,7 @@ GTP	gtp
 巰	oshr
 嬗	oshr
 嬂	oshr
-嫜	oshr
+嫜	oshf
 辘	oshs
 嫉	osht
 嫙	osht
@@ -30517,9 +30517,9 @@ GTP	gtp
 壈	ouho
 塙	ouho
 韾	ouhr
-境	ouhr
+境	ouhw
 堷	ouhr
-墇	ouhr
+墇	ouhf
 壠	ouhs
 塶	ouhs
 墩	ouht
@@ -31370,7 +31370,7 @@ GTP	gtp
 膱	ovhr
 臆	ovhr
 脐	ovhr
-障	ovhr
+障	ovhf
 疏	ovhr
 隴	ovhs
 朧	ovhs
@@ -32300,11 +32300,11 @@ GTP	gtp
 猄	owhp
 鯨	owhp
 鱭	owhr
-獍	owhr
+獍	owhw
 鯍	owhr
-鱆	owhr
+鱆	owhf
 鲚	owhr
-獐	owhr
+獐	owhf
 鳣	owhr
 鯜	owhs
 獤	owht
@@ -34405,12 +34405,12 @@ GTP	gtp
 鍄	oyhp
 齴	oyhq
 鑇	oyhr
-鏡	oyhr
+鏡	oyhw
 锍	oyhr
 鋶	oyhr
-鏱	oyhr
+鏱	oyhf
 镱	oyhr
-镜	oyhr
+镜	oyhw
 鑨	oyhs
 鏕	oyhs
 鏟	oyht
@@ -42587,7 +42587,7 @@ u̇	vpug
 柱	zch
 柱	zchd
 梓	zchf
-樟	zchr
+樟	zchf
 桩	zchu
 枳	zci
 枳	zcim
@@ -42649,7 +42649,7 @@ u̇	vpug
 溱	zdgt
 注	zdh
 注	zdhd
-漳	zdhr
+漳	zdhf
 澡	zdi
 澡	zdic
 浞	zdiy
@@ -42794,7 +42794,7 @@ u̇	vpug
 奏	zggk
 瑧	zggt
 璋	zgh
-璋	zghr
+璋	zghf
 珍	zgj
 珍	zgjq
 专	zgk
@@ -42823,15 +42823,17 @@ u̇	vpug
 瘃	zhak
 主	zhd
 主	zhdd
+章	zhf
 症	zhf
 症	zhfd
+章	zhff
 瘈	zhg
 瘈	zhga
 装	zhh
 麈	zhhd
 疰	zhhd
 霅	zhhi
-瘴	zhhr
+瘴	zhhf
 装	zhhw
 痃	zhhx
 咨	zhi
@@ -42858,8 +42860,6 @@ u̇	vpug
 衷	zhow
 彰	zhq
 彰	zhqe
-章	zhr
-章	zhrf
 姿	zhs
 妆	zhss
 姿	zhss
@@ -43234,9 +43234,9 @@ u̇	vpug
 崒	zohj
 蟅	zohm
 幢	zoho
-嶂	zohr
-幛	zohr
-蟑	zohr
+嶂	zohf
+幛	zohf
+蟑	zohf
 赃	zohu
 帜	zoi
 曱	zoii
@@ -43324,7 +43324,7 @@ u̇	vpug
 早	zrf
 早	zrff
 最	zrfl
-暲	zrhr
+暲	zrhf
 昣	zrjq
 照	zrm
 照	zrmm
@@ -43358,7 +43358,7 @@ u̇	vpug
 转	zsgk
 臻	zsgt
 辙	zsh
-嫜	zshr
+嫜	zshf
 辙	zsht
 轵	zsi
 轵	zsim
@@ -43489,7 +43489,7 @@ u̇	vpug
 陬	zvfl
 肢	zvfl
 脏	zvh
-障	zvhr
+障	zvhf
 脏	zvhu
 胗	zvj
 胗	zvjq
@@ -43538,7 +43538,7 @@ u̇	vpug
 詹	zwh
 詹	zwhi
 鳣	zwho
-獐	zwhr
+獐	zwhf
 鳣	zwhr
 炙	zwm
 鳟	zwmf
